# tendrill

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
dashboard/: app.js  index.html  style.css
data/knowledge/: nutrients.yaml  phases.yaml
docker/initdb/: 01-init-timescale.sql
docker/mosquitto/: mosquitto.conf  password.txt  password_plain.txt
src/tendrill/: __init__.py  config.py  main.py
src/tendrill/actuators/: __init__.py  controller.py  devices.py
src/tendrill/api/: __init__.py  routes.py  websocket.py
src/tendrill/core/: __init__.py  phases.py  rules.py  scheduler.py
src/tendrill/db/: __init__.py  models.py  repository.py  session.py
src/tendrill/knowledge/: __init__.py  defaults.py  loader.py  schemas.py
src/tendrill/ml/: __init__.py  anomaly.py  training.py
src/tendrill/sensors/: __init__.py  ingestion.py  models.py  mqtt.py
tests/: __init__.py  conftest.py
tools/: demo_publisher.py
